--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Kofer psihoalata">
     <meta name="author" content="Kofer psihoalata">
-    <meta name="keywords" content="Kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje">
+    <meta name="keywords" content="kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje, kofer psiho alata, kofer psiho-alata">
     <link rel="icon" href="./favicon.png">
     <title>
         Kofer psihoalata
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
 <body>
     <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript> -->
-    <div id="app"></div>
+    <div id="app">
+    </div>
+    
 </body>
 
 </html>
+
