Added design for join us section and post details

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akronim&family=Barrio&family=Bungee+Shade&family=Monofett&family=Poppins:wght@300&family=Ribeye+Marrow&family=Roboto:wght@100&family=Rubik+Maze&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
