--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Kofer psihoalata">
     <meta name="author" content="Kofer psihoalata">
     <meta name="keywords" content="kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje, kofer psiho alata, kofer psiho-alata">
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="./favicon.jpg">
     <title>
         Kofer psihoalata
     </title>
