--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Kofer psihoalata">
+    <meta property="og:image" content="./logo.png">
     <meta name="author" content="Kofer psihoalata">
     <meta name="keywords" content="kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje, kofer psiho alata, kofer psiho-alata">
     <link rel="icon" href="./favicon.jpg">
