--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-48ZT9FPYYZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-48ZT9FPYYZ');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Kofer psihoalata">
     <meta property="og:image" content="./logo.png">
     <meta name="author" content="Kofer psihoalata">
-    <meta name="keywords" content="kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje, kofer psiho alata, kofer psiho-alata">
+    <meta name="keywords" content="kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje, kofer psiho alata, kofer psiho-alata, psiholog, kofer, psihoalat, psiho-alat, crna gora, bar, podgorica, portal">
     <link rel="icon" href="./favicon.jpg">
     <title>
         Kofer psihoalata
@@ -25,6 +34,7 @@
     <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript> -->
+    <h1 style="display:none">Kofer psihoalata</h1>
     <div id="app">
     </div>
     
