--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,14 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-48ZT9FPYYZ"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-48ZT9FPYYZ');
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-48ZT9FPYYZ');
     </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,8 +40,7 @@
     <h1 style="display:none">Kofer psihoalata</h1>
     <div id="app">
     </div>
-    
+
 </body>
 
 </html>
-
