--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,22 +25,21 @@
     <title>
         Kofer psihoalata
     </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Akronim&family=Barrio&family=Bungee+Shade&family=Monofett&family=Poppins:wght@300&family=Ribeye+Marrow&family=Roboto:wght@100&family=Rubik+Maze&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </noscript>
 </head>
 
 <body>
-    <!-- <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <h1 style="display:none">Kofer psihoalata</h1>
     <div id="app">
     </div>
-
 </body>
 
 </html>
