posts pagination bug fix

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,18 +25,13 @@
     <title>
         Kofer psihoalata
     </title>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap"
-            rel="stylesheet"
-            type="text/css"
-        />
-    </noscript>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
 <body>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <h1 style="display:none">Kofer psihoalata</h1>
     <div id="app">
     </div>
