--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,17 +18,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Kofer psihoalata">
+    <meta property="og:site_name" content="Kofer psihoalata">
+    <meta property="og:title" content="Kofer psihoalata">
+    <meta property="og:description" content="Kofer psihoalata">
     <meta property="og:image" content="./logo.png">
+    <meta property="og:type" content="website">
     <meta name="author" content="Kofer psihoalata">
     <meta name="keywords" content="kofer psihoalata, psihologija, psiholog Crna Gora, mentalno zdravlje, kofer psiho alata, kofer psiho-alata, psiholog, kofer, psihoalat, psiho-alat, crna gora, bar, podgorica, portal">
     <link rel="icon" href="./favicon.jpg">
     <title>
         Kofer psihoalata
     </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <link
+        href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+        rel="stylesheet"
+        type="text/css"
+        />
+    </noscript>
 </head>
 
 <body>
