--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-48ZT9FPYYZ"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-48ZT9FPYYZ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
