removed defer from gmt

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Google tag (gtag.js) -->
     <script defer async src="https://www.googletagmanager.com/gtag/js?id=G-48ZT9FPYYZ"></script>
-    <script defer async>
+    <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -29,8 +29,8 @@
     <title>
         Kofer psihoalata
     </title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap" as="style" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" as="style" media="print" onload="this.media='all'">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap"
