--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,6 +31,8 @@
     <title>
         Kofer psihoalata
     </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- <link href="https://fonts.googleapis.com/css2?family=Akronim&family=Freckle+Face&family=Kumar+One+Outline&family=Love+Ya+Like+A+Sister&family=Modak&family=Oi&family=Peralta&family=Ranchers&family=Rubik+Moonrocks&family=Rubik+Puddles&family=Spicy+Rice&display=swap" rel="stylesheet"> -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Ribeye+Marrow&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link
